Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

{{$NEXT}}

1.0034  2015-02-02 21:42:42 CET
    [SECURITY]
        - Fixed a possible directory traversal with Plack::App::File on Win32 (sri)

    [IMPROVEMENTS]
        - Documentation improvements (timbunce, oalders, autarch, frioux)
        - Avoid warnings in Plack::App::WrapCGI (frioux)

1.0033  2014-10-23 12:33:18 PDT
    [BUG FIXES]
        - Lint: Fix error messages (fgabolde) #473
        - ErrorDocument: Reverse the $done filtering (nwellnhof) #474

    [IMPROVEMENTS]
        - StackTrace: Improve the accuracy of thrown exceptions in case where an excpetion
          is thrown in destructors (nwellnhof) #476

1.0032  2014-10-04 11:13:24 PDT
    [IMPROVEMENTS]
        - Support Server::Starter in FCGI handler (yuryu) #435
        - Various documentation fixes

1.0031  2014-08-01 13:19:14 PDT
    [SECURITY]
        - Plack::App::File would previously strip trailing slashes off
          provided paths. This in combination with the common pattern
          of serving files with Plack::Middleware::Static could allow
          an attacker to bypass a whitelist of generated files (avar) #446

    [IMPROVEMENTS]
        - Let HTTP::Message::PSGI warn in case of invalid PSGI response (wchristian) #437
        - Update documentation on how response_cb works with writer (doy)
        - Make AccessLog work on non-POSIX environment (dex4er) #442
        - Plack::App::WrapCGI no longer warns under 5.19.9 (frew)
        - Avoid Rosetta Flash attack in JSONP middleware (nichtich) #464
        - Fix Plack::Util::inline_object to make it work with can() as a class method

    [NEW FEATURES]
        - Add $req->query_string shortcut to access QUERY_STRING in PSGI environment

1.0030  2013-11-23 08:54:01 CET
    [IMPROVEMENTS]
        - Middleware::LogDispatch stringifies objects (oalders) #427
        - Encode wide character strings as UTF-8 in HTTP::Server::PSGI #429